# Sift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.codebuddy/plans/: archive-manager-and-compare-mode_d5fc09a4(未完成).md  delete-defer-and-thumbnail-pagination_1896e51a(未完成).md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
scripts/: fix-sift-mac.command  release.sh
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: archive.rs  cache.rs  delete.rs  export.rs  file_actions.rs  mod.rs  scan.rs  thumbnail.rs
src-tauri/src/models/: mod.rs  photo.rs
src-tauri/src/utils/: exif.rs  file_types.rs  mod.rs  raw_preview.rs
src/components/actions/: ActionBar.vue  ToastNotification.vue
src/components/archive/: ArchiveDialog.vue
src/components/common/: ContextMenu.vue  SkeletonImage.vue
src/components/exif/: ExifPanel.vue
src/components/status/: FilterGallery.vue  RollingNumber.vue  StatusBar.vue
src/components/summary/: SummaryCard.vue
src/composables/: useAmbientColor.ts  useContextMenu.ts  useImageLoader.ts  useImageZoom.ts  useKeyboard.ts
src/services/: tauriCommands.ts
src/stores/: sessionStore.ts  viewStore.ts
src/styles/: main.css
src/types/: index.ts
src/utils/: path.ts
(+4 files in other folders)
